[project]
name = "5-04-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "scipy>=1.17.0",
]
